--- a/Encriptar/index.html
+++ b/Encriptar/index.html
@@ -9,6 +9,14 @@ and open the template in the editor.
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <div>TODO write content</div>
+        <div>
+            <input id="ienc"/>
+            <button id="encr">Encriptar!</button>
+            <input id="denc"/>
+            <button id="desn">Desencriptar!</button>
+        </div>
+        <script>
+            
+        </script>
     </body>
 </html>
