--- a/Encriptar/index.html
+++ b/Encriptar/index.html
@@ -12,8 +12,12 @@ and open the template in the editor.
         <div>
             <input id="ienc"/>
             <button id="encr">Encriptar!</button>
+            <p id="enc"></p>
+            <br/>
+            <br/>
             <input id="denc"/>
             <button id="desn">Desencriptar!</button>
+            <p id="desenc"></p>
         </div>
         <script>
             
