--- a/Encriptar/index.html
+++ b/Encriptar/index.html
@@ -35,7 +35,7 @@
                 document.getElementById("enc").innerHTML = result;
             }
             
-            function desenecriptar() {
+            function desencriptar() {
                 var result = "";
                 var text = document.getElementById("denc").value;
                 var array=text.toString().split("#");
