--- a/Encriptar/index.html
+++ b/Encriptar/index.html
@@ -12,7 +12,7 @@
             <p id="enc"></p>
             <br/>
             <br/>
-            <input id="denc" type="text"/>
+            <input id="denc"/>
             <button id="desn" onclick="javascript:desencriptar();">Desencriptar!</button>
             <p id="desenc"></p>
         </div>
