--- a/LaVoltaJS/index.html
+++ b/LaVoltaJS/index.html
@@ -3,8 +3,63 @@
     <head>
         <title>La Volta</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <link type="style/css" rel="stylesheet" href="dist/css/bootstrap.min.css">
+        <link type="style/css" rel="stylesheet" href="dist/css/style.css">
+        <script type="text/javascript" src="dist/js/jquery-1.10.2.min.js"></script>
+        <script type="text/javascript" src="dist/js/bootstrap.js"></script>
     </head>
     <body>
-        <div>TODO write content</div>
+        <div class="container">
+            <h1>El joc oficial de La Volta</h1>
+            <hr/>
+            <div id="datos" class="center-block">
+                <div id="eq1" class="infoeq">
+                    <h3>Datos Equipo 1:</h3>
+                    <hr/>
+                    <label for="name1">Nom equip:</label>
+                    <input id="name1" class="form-control" type="text" placeholder="Nom equip"/>
+                    <label for="cicl1">Velocidad Ciclista 1:</label>
+                    <input id="cicl1" class="form-control" type="text" placeholder="Velocidad"/>
+                    <label for="cicl21">Velocidad Ciclista 2:</label>
+                    <input id="cicl21" class="form-control" type="text" placeholder="Velocidad"/>
+                    <label for="cicl31">Velocidad Ciclista 3:</label>
+                    <input id="cicl31" class="form-control" type="text" placeholder="Velocidad"/>
+                </div>
+                <div id="eq2" class="infoeq">
+                    <h3>Datos Equipo 2:</h3>
+                    <hr/>
+                    <label for="name2">Nom equip:</label>
+                    <input id="name2" class="form-control" type="text" placeholder="Nom equip"/>
+                    <label for="cicl2">Velocidad Ciclista 1:</label>
+                    <input id="cicl2" class="form-control" type="text" placeholder="Velocidad"/>
+                    <label for="cicl22">Velocidad Ciclista 2:</label>
+                    <input id="cicl22" class="form-control" type="text" placeholder="Velocidad"/>
+                    <label for="cicl32">Velocidad Ciclista 3:</label>
+                    <input id="cicl32" class="form-control" type="text" placeholder="Velocidad"/>
+                </div>
+                <div id="buttons">
+                    <button id="init" class="btn btn-primary btn-lg" onclick="javascript:initgame();">GO!</button>
+                </div>
+            </div>
+            <div id="game" class="center-block">
+                <section class="etapa">
+                    <header><h3>Equip 1</h3></header>
+                    <article>
+                        <div id="progeq1">
+                            <img alt="etapa" src="dist/img/etapa.png"/>
+                        </div>
+                    </article>
+                </section>
+                <section class="etapa">
+                    <header><h3>Equip 2</h3></header>
+                    <article>
+                        <div id="progeq2">
+                            <img alt="etapa" src="dist/img/etapa.png"/>
+                        </div>
+                    </article>
+                </section>
+            </div>
+        </div>
+        <script type="text/javascript" src="dist/js/game.js"></script>
     </body>
 </html>
