--- a/LaVoltaJS/index.html
+++ b/LaVoltaJS/index.html
@@ -3,8 +3,8 @@
     <head>
         <title>La Volta</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link type="style/css" rel="stylesheet" href="dist/css/bootstrap.min.css">
-        <link type="style/css" rel="stylesheet" href="dist/css/style.css">
+        <link type="style/css" rel="stylesheet" href="dist/css/bootstrap.min.css"/>
+        <link type="style/css" rel="stylesheet" href="dist/css/style.css"/>
         <script type="text/javascript" src="dist/js/jquery-1.10.2.min.js"></script>
         <script type="text/javascript" src="dist/js/bootstrap.js"></script>
     </head>
@@ -66,6 +66,5 @@
             </div>
         </div>
         <script type="text/javascript" src="dist/js/game.js"></script>
-        <script type="text/javascript" src="dist/js/controller.js"></script>
     </body>
 </html>
