--- a/LaVoltaJS/index.html
+++ b/LaVoltaJS/index.html
@@ -62,6 +62,7 @@
                 </div>
                 <div class="buttons">
                     <button id="next" class="btn btn-primary btn-lg" onclick="javascript:nextturn();">Passar torn</button>
+                    <button id="reset" class="btn btn-primary btn-lg" onclick="javascript:hardreset();">Reiniciar</button>
                 </div>
             </div>
         </div>
