--- a/CodeFriends/Plantillas/footer.html
+++ b/CodeFriends/Plantillas/footer.html
@@ -1,6 +1,3 @@
-
-
-        <div id="footer">
-            
-        </div>
-
+<footer>
+    Copyright CodeFriends S.L.  Todos los derechos reservados
+</footer>
