--- a/CodeFriends/Plantillas/footer.html
+++ b/CodeFriends/Plantillas/footer.html
@@ -1,3 +1,8 @@
+	</div>
+</div>
 <footer>
     Copyright CodeFriends S.L.  Todos los derechos reservados
 </footer>
+<script type="text/javascript">
+	SyntaxHighlighter.all();
+</script>
