--- a/CodeFriends/Plantillas/header.html
+++ b/CodeFriends/Plantillas/header.html
@@ -1,6 +1,11 @@
 <title>CodeFriends</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<script type="text/javascript" src="./dist/js/shCore.js"></script>
+<script type="text/javascript" src="./dist/js/shBrushJScript.js"></script>
 <link type="style/css" rel="stylesheet" href="./dist/css/bootstrap.min.css"/>
+<link type="style/css" rel="stylesheet" href="./dist/css/font-awesome.min.css">
+<link type="style/css" rel="stylesheet" href="./dist/css/shCore.css"/>
+<link type="style/css" rel="stylesheet" href="./dist/css/shThemeDefault.css"/>
 <link type="style/css" rel="stylesheet" href="./dist/css/style.css"/>
 <script type="text/javascript" src="./dist/js/jquery-1.10.2.min.js"></script>
 <script type="text/javascript" src="./dist/js/bootstrap.js"></script>
