--- a/CodeFriends/Plantillas/header.html
+++ b/CodeFriends/Plantillas/header.html
@@ -2,8 +2,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <script type="text/javascript" src="./dist/js/shCore.js"></script>
 <script type="text/javascript" src="./dist/js/shBrushJScript.js"></script>
-<link type="style/css" rel="stylesheet" href="./dist/css/bootstrap.min.css"/>
-<link type="style/css" rel="stylesheet" href="./dist/css/font-awesome.min.css">
+<link type="style/css" rel="stylesheet" href="./dist/css/bootstrap.css"/>
 <link type="style/css" rel="stylesheet" href="./dist/css/shCore.css"/>
 <link type="style/css" rel="stylesheet" href="./dist/css/shThemeDefault.css"/>
 <link type="style/css" rel="stylesheet" href="./dist/css/style.css"/>
