Too much news! 06/12/2013 7:38 AM
Estic mes o menys aixi:
http://z0r.de/4770

--- a/CodeFriends/Plantillas/footer.html
+++ b/CodeFriends/Plantillas/footer.html
@@ -1,7 +1,7 @@
     <div id="push"></div>
 </div>
 <footer>
-    Copyright CodeFriends S.L.  Todos los derechos reservados
+    Copyright CodeFriends S.L.  Todos los derechos reservados || Visualizar con 1920*1080
 </footer>
 <script type="text/javascript">
 	SyntaxHighlighter.all();
