--- a/BonNadal/index.html
+++ b/BonNadal/index.html
@@ -4,6 +4,7 @@
         <title></title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link type="style/css" rel="stylesheet" href="style.css"/>
+        <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
     </head>
     <body>
         <div id="container"></div>
