--- a/BonNadal/index.html
+++ b/BonNadal/index.html
@@ -7,7 +7,8 @@
         <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
     </head>
     <body>
-        <div id="container"></div>
+        <div id="container">
+        </div>
         <script src="./dist/kinetic-v4.7.4.min.js"></script>
         <script src="./dist/mxmas.js"></script>
     </body>
